--- a/checkout-done.html
+++ b/checkout-done.html
@@ -11,6 +11,13 @@ layout: default
     <li id="msg2"></li>
     <li id="msg3"></li>
     <li id="msg4"></li>
+    <li>This order will ship within 1-2 weeks.</li>
+  </ul>
+  International Buyers:<br>
+  <ul>
+    <li>Shipments are fulfilled by EMS and fully insured.</li>
+    <li>Signature will be required for delivery.</li>
+    <li>You must pay duty and import tax when the package is delivered.</li>
   </ul>
 </div>
 
