--- a/checkout-failed.html
+++ b/checkout-failed.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div style="max-width:800px;margin:auto;">
-Transaction failed.
+  <div style="text-align: center;">
+    Oops! Your order was not accepted due to issues with PayPal.  Please try again later.
+  </div>
 </div>
 
