--- a/checkout.html
+++ b/checkout.html
@@ -11,6 +11,8 @@ layout: default
   </table>
 </div>
 
+<div style="text-align: center;">Orders are shipped within 1-2 weeks.</div>
+
 <div id="smart-button-container" style="max-width:400px;margin:auto;">
   <div style="text-align: center;">
     <div id="paypal-button-container"></div>
