Add store message.

--- a/store.html
+++ b/store.html
@@ -13,6 +13,10 @@ layout: default
 </div>
 
 <div style="max-width:1000px;margin:auto;">
+  <div style="text-align: center;">
+    Another small batch of ER-101 and ER-301 coming in July.
+  </div>
+  <hr>
 
   <div class="product-group">
     {% include product.html product="er-101-n" %}
