Update store msg.

--- a/store.html
+++ b/store.html
@@ -14,7 +14,7 @@ layout: default
 
 <div style="max-width:1000px;margin:auto;">
   <div style="text-align: center;">
-    Another small batch of ER-101 and ER-301 coming in July.
+    Sold out for June.  Another small batch of ER-101 and ER-301 coming in July.
   </div>
   <hr>
 
