Left align store msg

--- a/store.html
+++ b/store.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div style="max-width:1000px;margin:auto;">
-  <div style="text-align: center;">
+  <div style="text-align: left;">
     Sold out for June.  Another small batch of ER-101 and ER-301 coming in July.
   </div>
   <hr>
