--- a/store/checkout-failed.html
+++ b/store/checkout-failed.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div style="max-width:800px;margin:auto;">
+<div class="store-content">
   <div style="text-align: center;">
     Oops! Your order was not accepted due to issues with PayPal.  Please try again later.
   </div>
