--- a/store/index.html
+++ b/store/index.html
@@ -6,14 +6,14 @@ layout: default
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="cart-tab">
-  <a href="checkout.html">
+  <a href="cart.html">
     <i class="fa" style="font-size:36px;user-select:none;">&#xf07a;</i>
     <span class='cart-count'>0</span>
   </a>
 </div>
 
 <div style="max-width:1000px;margin:auto;">
-  <div style="text-align: left;">
+  <div id="store-news">
     Sold out for June.  Another small batch of ER-101 and ER-301 coming in July.
   </div>
   <hr>
