--- a/store/cart.html
+++ b/store/cart.html
@@ -6,7 +6,7 @@ layout: default
 <script src="https://www.paypal.com/sdk/js?client-id=ATRHCDO7mBNOSkRSDeXO1K_zaMuwqucuQreUSv5lAcdRMx5fDN4Y7YpCxJpLwWaB5lsoof293MPst3ff&currency=JPY&intent=authorize"
   data-sdk-integration-source="button-factory"></script>
 
-<div style="max-width:800px;margin:auto;">
+<div class="store-content">
   <table class="cart-table">
   </table>
 </div>
@@ -16,8 +16,8 @@ layout: default
 <div id="smart-button-container" style="max-width:400px;margin:auto;">
   <div style="text-align: center;">
     <div id="paypal-button-container"></div>
-    <a href="store.html">[Back to Store]</a><br>
+    <a href="/store">[Back to Store]</a><br>
   </div>
 </div>
 
-<script src="checkout.js"></script>
+<script src="cart.js"></script>
