--- a/store/closed.html
+++ b/store/closed.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div style="max-width:800px;margin:auto;">
+<div class="store-content">
 The store is closed.  Check <a class="page-link" href="https://www.twitter.com/odevices">odevices@twitter</a> for updates.
 </div>
 
