Add jump link to store faq

--- a/store/index.html
+++ b/store/index.html
@@ -34,7 +34,7 @@ layout: default
   </div>
 
   <hr>
-  <h2>Store FAQ</h2>
+  <a id="faq"></a><h2>Store FAQ</h2>
   <div id="store-faq">
     {% include restock-faq.html %}
     {% include checkout-faq.html %}
