Update store news.

--- a/store/index.html
+++ b/store/index.html
@@ -11,7 +11,7 @@ layout: default
 
 <div class="store-content">
   <div id="store-news">
-    Sold out for June. Another small batch of ER-101 and ER-301 coming in July.
+    Another small batch of ER-101 and ER-301 coming in July.  Watch <a href="https://twitter.com/odevices">this</a> for updates.
   </div>
   <hr>
 
