Update store news

--- a/store/index.html
+++ b/store/index.html
@@ -11,7 +11,7 @@ layout: default
 
 <div class="store-content">
   <div id="store-news">
-    Another small batch of ER-101 and ER-301 coming in July.  Watch <a href="https://twitter.com/odevices">this</a> for updates.
+    <b>Store News:</b> Restock of ER-301 (People's Choice and Original Flavor only) and ER-101 (all panel types) coming on August 6 at 9pm Tokyo time.  Watch <a href="https://twitter.com/odevices">this</a> for updates.
   </div>
   <hr>
 
